--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,36 +1,3 @@
-.App {
-  display: flex;
-}
-
-.leftbar {
-  padding: 10em;
-  max-width: 30vw;
-  min-height: 100vh;
+.blue {
   background-color: #4472c4;
-}
-
-.rightbar {
-  padding: 10em;
-}
-
-.noBullet {
-  list-style-type: none;
-}
-
-.header {
-  margin: 30px;
-  display: flex;
-  border-style: solid;
-  border-color: green;
-  border-width: 2px;
-}
-
-.headerItem {
-  max-height: 1.2rem;
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-.App-link {
-  color: #61dafb;
 }
